--- a/style.css
+++ b/style.css
@@ -1,58 +1,155 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
+
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-header {
-  background: #222;
-  color: white;
-  padding: 40px;
-  text-align: center;
-}
 
-section {
-  padding: 40px;
-  max-width: 800px;
-  margin: auto;
-}
-
-footer {
-  background: #f2f2f2;
-  text-align: center;
-  padding: 20px;
-}
-
-ul {
-  display: flex;
-  gap: 20px;
-  list-style: none;
-  padding: 0;
+body {
+  font-family: system-ui, sans-serif;
+  color: #222;
+  line-height: 1.6;
 }
 
 a {
-  display: inline-block;
-  padding: 10px 20px;
+  text-decoration: none;
+  color: inherit;
+}
+
+
+.container {
+  max-width: 900px;
+  margin: auto;
+  padding: 0 20px;
+}
+/* Header  */
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: white;
+  border-bottom: 1px solid #e5e5e5;
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 0;
+}
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+.nav-links a:hover{
+  color: #555;
+}
+
+
+/* Hero  */
+.hero {
+  padding: 140px 0 80px;
+}
+
+.hero h2 {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+}
+
+.hero span {
+  border-bottom: 2px solid black;
+}
+
+.hero p {
+  max-width: 500px;
+  color: #555;
+}
+
+/* Buttons  */
+.buttons {
+  margin-top: 20px;
+  display: flex;
+  gap: 15px;
+}
+
+.btn {
+  padding: 12px 24px;
+  border-radius: 6px;
+  font-weight: 500;
+}
+
+.primary {
   background: black;
   color: white;
-  text-decoration: none;
-  border-radius: 5px;
 }
 
-a:hover {
-  background: #444;
+.primary:hover {
+  background: #333;
 }
 
+.outline {
+  border: 1px solid black;
+}
+
+.outline:hover {
+  background: #f5f5f5;
+}
+
+/* Sections */
+.section {
+  padding: 80px 0;
+}
+
+.light {
+  background: #f9f9f9;
+}
+
+.section h2 {
+  margin-bottom: 20px;
+}
+.section p {
+  margin-bottom: 20px;
+}
+
+/* Grid */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+}
+
+/* Cards */
+.card {
+  padding: 20px;
+  border: 1px solid #ddd;
+  background: white;
+  transition: border 0.3s;
+}
+
+.card:hover {
+  border-color: black;
+}
+
+/* Footer */
+.footer {
+  padding: 30px;
+  text-align: center;
+  border-top: 1px solid #e5e5e5;
+  color: #666;
+}
+
+/* Responsive */
 @media (max-width: 600px) {
-  header {
-    padding: 20px;
+  .nav-links {
+    display: none;
   }
 
-  section {
-    padding: 20px;
+  .hero h2 {
+    font-size: 2rem;
   }
 
-  ul {
+  .buttons {
     flex-direction: column;
   }
 }
